--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -11,9 +11,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
     <hr width="1000">
     <section class="grid projects">
       <div class="item">
-        <a href="https://Timer.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Timer.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Timer.RockGamerAK.com" target="_blank" >
+          <a href="https://Timer.adarshrkumar.dev" target="_blank" >
             <h3>My Timer Application</h3>
           </a>
           <div class="description">
@@ -22,9 +22,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <div class="item">
-        <a href="https://Live-Clock.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Live-Clock.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Live-Clock.RockGamerAK.com" target="_blank">
+          <a href="https://Live-Clock.adarshrkumar.dev" target="_blank">
             <h3>My Clock Application</h3>
           </a>
           <div class="description">
@@ -33,9 +33,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <div class="item">
-        <a href="https://Nearpod.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Nearpod.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Nearpod.RockGamerAK.com" target="_blank">
+          <a href="https://Nearpod.adarshrkumar.dev" target="_blank">
             <h3>My Nearpod Joiner</h3>
           </a>
           <div class="description">
@@ -44,9 +44,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <div class="item">
-        <a href="https://Favicons.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Favicons.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Favicons.RockGamerAK.com" target="_blank">
+          <a href="https://Favicons.adarshrkumar.dev" target="_blank">
             <h3>My Favicon Generator</h3>
           </a>
           <div class="description">
@@ -55,9 +55,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <!-- <div class="item">
-        <a href="https://Image-Changer.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Image-Changer.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Image-Changer.RockGamerAK.com" target="_blank">
+          <a href="https://Image-Changer.adarshrkumar.dev" target="_blank">
             <h3>My Image Changer</h3>
           </a>
           <div class="description">
@@ -66,9 +66,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div> -->
       <!-- <div class="item">
-        <a href="https://Pop-Ups.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Pop-Ups.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Pop-Ups.RockGamerAK.com" target="_blank">
+          <a href="https://Pop-Ups.adarshrkumar.dev" target="_blank">
             <h3>My Pop-Ups Machene</h3>
           </a>
           <div class="description">
@@ -77,9 +77,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div> -->
       <div class="item">
-        <a href="https://Disability-Menus.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Disability-Menus.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Disability-Menus.RockGamerAK.com" target="_blank">
+          <a href="https://Disability-Menus.adarshrkumar.dev" target="_blank">
             <h3>My Disability Menus</h3>
           </a>
           <div class="description">
@@ -88,9 +88,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <!-- <div class="item">
-        <a href="https://Browser.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Browser.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Browser.RockGamerAK.com" target="_blank">
+          <a href="https://Browser.adarshrkumar.dev" target="_blank">
             <h3>My Browser</h3>
           </a>
           <div class="description">
@@ -104,9 +104,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
     <hr width="1000">
     <section class="grid games">
       <div class="item">
-        <a href="https://Uno.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Uno.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Uno.RockGamerAK.com"target="_blank" >
+          <a href="https://Uno.adarshrkumar.dev"target="_blank" >
             <h3>My UNO Game</h3>
           </a>
           <div class="description">
@@ -115,9 +115,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <div class="item">
-        <a href="https://Tic-Tac-Toe.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Tic-Tac-Toe.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Tic-Tac-Toe.RockGamerAK.com" target="_blank">
+          <a href="https://Tic-Tac-Toe.adarshrkumar.dev" target="_blank">
             <h3>My Tic-Tac-Toe Game</h3>
           </a>
           <div class="description">
@@ -126,9 +126,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <div class="item">
-        <a href="https://Magic-8-Ball.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Magic-8-Ball.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Magic-8-Ball.RockGamerAK.com" target="_blank">
+          <a href="https://Magic-8-Ball.adarshrkumar.dev" target="_blank">
             <h3>My Magic-8-Ball Game</h3>
           </a>
           <div class="description">
@@ -137,9 +137,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <div class="item">
-        <a href="https://Rock-Paper-Scissors.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Rock-Paper-Scissors.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Rock-Paper-Scissors.RockGamerAK.com" target="_blank">
+          <a href="https://Rock-Paper-Scissors.adarshrkumar.dev" target="_blank">
             <h3>My Rock-Paper-Scissors Game</h3>
           </a>
           <div class="description">
@@ -148,9 +148,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <!-- <div class="item">
-        <a href="https://Cookie-Clicker.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Cookie-Clicker.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Cookie-Clicker.RockGamerAK.com" target="_blank">
+          <a href="https://Cookie-Clicker.adarshrkumar.dev" target="_blank">
             <h3>My Cookie Clicker Game</h3>
           </a>
           <div class="description">
@@ -159,9 +159,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div> -->
       <!-- <div class="item">
-        <a href="https://Pop-Ups.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Pop-Ups.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Pop-Ups.RockGamerAK.com" target="_blank">
+          <a href="https://Pop-Ups.adarshrkumar.dev" target="_blank">
             <h3>My Pop-Ups Machene</h3>
           </a>
           <div class="description">
@@ -170,9 +170,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div> -->
       <div class="item">
-        <a href="https://Disability-Menus.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Disability-Menus.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Disability-Menus.RockGamerAK.com" target="_blank">
+          <a href="https://Disability-Menus.adarshrkumar.dev" target="_blank">
             <h3>My Disability Menus</h3>
           </a>
           <div class="description">
@@ -181,9 +181,9 @@ import SiteGridContent from '../components/SiteGridContent.astro'
         </div>
       </div>
       <!-- <div class="item">
-        <a href="https://Browser.RockGamerAK.com" target="_blank" class="image-link" />
+        <a href="https://Browser.adarshrkumar.dev" target="_blank" class="image-link" />
         <div>
-          <a href="https://Browser.RockGamerAK.com" target="_blank">
+          <a href="https://Browser.adarshrkumar.dev" target="_blank">
             <h3>My Browser</h3>
           </a>
           <div class="description">
