--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -41,6 +41,7 @@
     &:not(:has( + .item + .item)):has( + .item), &.left {
         --outside: calc(var(--columns)/2 - var(--span)/2);
         --inside: calc(var(--columns)/2 + var(--span)/2);
+        background-color: green;
         grid-column: calc(1*var(--outside)) / calc(1*var(--inside));
         &.featured {
             grid-column: calc(1*var(--outside) - var(--span)*2) / calc(1*var(--inside));
