--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -52,9 +52,8 @@
             }
         }
     }
-    &:not(:has( + .item)), &.center {
+    &:not(&:is(:not(:has( + .item + .item)):has( + .item), .left) + .item, .right, &:has( + .item)), &.center {
         grid-column: calc(var(--columns)/2) / calc(-1*var(--columns)/2);
-        background-color: green;
         &.featured {
             grid-column: calc(1*var(--columns)/2 - var(--span)/2) / calc(-1*var(--columns)/2 + var(--span)/2);
         }
