--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -38,6 +38,12 @@
     &.featured {
         grid-column: span calc(var(--span)*2);
     }
+    &:not(:has( + .item)), &.center {
+        grid-column: calc(var(--columns)/2) / calc(-1*var(--columns)/2);
+        &.featured {
+            grid-column: calc(1*var(--columns)/2 - var(--span)/2) / calc(-1*var(--columns)/2 + var(--span)/2);
+        }
+    }
     &:not(:has( + .item + .item)):has( + .item), &.left {
         --outside: calc(var(--columns)/2 - var(--span)/2);
         --inside: calc(var(--columns)/2 + var(--span)/2);
@@ -50,12 +56,6 @@
             &.featured {
                 grid-column: calc(1*var(--inside)) / calc(1*var(--outside) + var(--span)*2);
             }
-        }
-    }
-    &:not(:is(:has( + .item + .item):has( + .item), .left) + .item, .right):not(:has( + .item)), &.center {
-        grid-column: calc(var(--columns)/2) / calc(-1*var(--columns)/2);
-        &.featured {
-            grid-column: calc(1*var(--columns)/2 - var(--span)/2) / calc(-1*var(--columns)/2 + var(--span)/2);
         }
     }
 }
