--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -2,6 +2,10 @@
     position: relative;
 }
 
+.site-grid :is(h1, h2, h3, h4, h5, h6) {
+    text-align: center;
+}
+
 .site-grid hr {
     margin-block: 0.625em;
 }
