--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -47,11 +47,13 @@
         --single: var(--column-span)/2
         --outside: calc(var(--columns)/2 - var(--single));
         --inside: calc(var(--columns)/2 + var(--single));
+        background-color: orangered;
         grid-column: calc(1*var(--outside)) / calc(1*var(--inside));
         &.featured {
             grid-column: calc(1*var(--outside) - var(--column-span)*2) / calc(1*var(--inside));
         }
         & + .item, .right {
+            background-color: green;
             grid-column: calc(-1*var(--inside)) / calc(-1*var(--outside) + var(--column-span)*2);
             &.featured {
                 grid-column: calc(1*var(--inside)) / calc(1*var(--outside) + var(--column-span)*2);
