--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -63,6 +63,8 @@
                 inset: 0;
                 display: grid;
                 place-items: center;
+                background-color: red;
+                z-index: 1000;
             }
 
             &.featured {
