--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -43,7 +43,7 @@
     &.featured {
         grid-column: span var(--grid-span);
     }
-    &:not(:has( + .item + .item)):has( + .item), &.left {
+    &:not(:has( + .item + .item)):has( + .item), .left {
         --single: calc(var(--column-span)/2)
         --outside: calc(var(--columns)/2 - var(--single));
         --inside: calc(var(--columns)/2 + var(--single));
@@ -60,7 +60,7 @@
             }
         }
     }
-    &:not(:has( + .item)), &.center {
+    &:not(:has( + .item)), .center {
         grid-column: calc(var(--columns)/2) / calc(-1*var(--columns)/2);
         &.featured {
             grid-column: calc(1*var(--columns)/2 - var(--column-span)/2) / calc(-1*var(--columns)/2 + var(--column-span)/2);
