--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -25,6 +25,7 @@
 
     display: grid;
     grid-template-columns: repeat(/*auto-fit*/var(--columns), 1fr); // 6
+    justify-items: center;
     gap: var(--gap);
 
     &:not(#videos) {
