--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -45,18 +45,17 @@
     }
     &.left, &.right {
         --single: calc(var(--column-span)/2)
-        --outside: calc(var(--columns)/2 - var(--single));
-        --inside: calc(var(--columns)/2 + var(--single));
+        --center: calc(var(--columns)/2 + var(--single));
         &.left {
             background-color: orangered;
-            grid-column: calc(1*var(--outside)) / calc(1*var(--inside));
+            grid-column: calc(1*var(--inside) - var(--column-span)) / calc(1*var(--inside));
             &.featured {
-                grid-column: calc(1*var(--outside) - var(--column-span)*2) / calc(1*var(--inside));
+                grid-column: calc(1*var(--center) - var(--column-span)*2) / calc(1*var(--center));
             }
         }
         &.right {
             background-color: green;
-            grid-column: calc(-1*var(--inside)) / calc(-1*var(--outside));
+            grid-column: calc(-1*var(--center)) / calc(-1*var(--center) + var(--column-span));
             &.featured {
                 grid-column: calc(1*var(--inside)) / calc(1*var(--outside) + var(--column-span)*2);
             }
