--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -12,7 +12,7 @@ var { logo } = Astro.props
         <button onclick="goToUrl(this)" data-href="/contact">Contact</button>
         <button onclick="goToUrl(this)" data-href="/portfolio">Portfolio</button>
         <button onclick="goToUrl(this)" data-href="/projects">Projects</button>
-        <button onclick="goToUrl(this)" data-href="https://blog.adarshkumar.com" data-target="_blank">Blog</button>
+        <button onclick="goToUrl(this)" data-href="https://blog.adarshkumar.dev" data-target="_blank">Blog</button>
         <!-- <button onclick="goToUrl(this)" data-href="/sites">Sites</button> -->
         <button onclick="goToUrl(this)" data-href="/videos">Videos</button>
     </nav>
