create and use music.astro

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -7,23 +7,25 @@ var { logo } = Astro.props
 <header id="header">
     <a class="logo" href="/" style={`background-image: url('${logo}');`}></a>
     <nav class="nav">
-        <button onclick="goToUrl(this)" data-href="/">Home</button>
-        <button onclick="goToUrl(this)" data-href="/about">About</button>
-        <button onclick="goToUrl(this)" data-href="/contact">Contact</button>
-        <button onclick="goToUrl(this)" data-href="/portfolio">Portfolio</button>
-        <button onclick="goToUrl(this)" data-href="/projects">Projects</button>
-        <button onclick="goToUrl(this)" data-href="https://blog.adarshkumar.dev" data-target="_blank">Blog</button>
-        <!-- <button onclick="goToUrl(this)" data-href="/sites">Sites</button> -->
-        <button onclick="goToUrl(this)" data-href="/videos">Videos</button>
+        <button onclick="goToUrl(this)" url="/">Home</button>
+        <button onclick="goToUrl(this)" url="/about">About</button>
+        <button onclick="goToUrl(this)" url="/contact">Contact</button>
+        <button onclick="goToUrl(this)" url="/portfolio">Portfolio</button>
+        <button onclick="goToUrl(this)" url="/projects">Projects</button>
+        <button onclick="goToUrl(this)" url="https://blog.adarshkumar.dev" target="_blank">Blog</button>
+        <!-- <button onclick="goToUrl(this)" url="/sites">Sites</button> -->
+        <button onclick="goToUrl(this)" url="/videos">Videos</button>
+        <!-- <button onclick="goToUrl(this)" url="/music">Music</button> -->
     </nav>
 </header>
 <script is:inline>
-    function goToUrl(btn) {
-        var link = btn
-        var target = '_self'
+    function goToUrl(link='/', target='_self') {
         if (typeof link !== 'string') {
-            link = btn.getAttribute('data-href')
-            target = btn.getAttribute('data-target')
+            link = link.getAttribute('url')
+            target = link.getAttribute('target')
+            if (!!target === false) {
+                if (link.includes('://')) target = '_blank'
+            }
         }
         if (target === '_blank') {
             window.open(link)
@@ -34,13 +36,11 @@ var { logo } = Astro.props
         else if (target === '_top') {
             top.location.href = link
         }
-        else if (!!target) {
-            if (target.startsWith('_') === false) {
-                document.getElementById(target).src = link
-            }
-            else {
-                location.href = link
-            }
+        else if (target.startsWith('_') === false) {
+            document.getElementById(target).src = link
+        }
+        else if (target === '_self') {
+            location.href = link
         }
         else {
             location.href = link
