--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
 ---
-<Layout title="Music" classItems="ignorePadding" inlineStyles="display: grid;">
+<Layout title="Music Taste" classItems="ignorePadding" inlineStyles="display: grid;">
   <iframe frameborder="0" src="https://music.apple.com/profile/RockGamerAK" style="background: white;"></iframe>
 </Layout>
