--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -6,5 +6,8 @@ import Layout from '../layouts/Layout.astro'
     <script>
       location.href = document.querySelectorAll('iframe').pop().src
     </script>
+    <noscript>
+      <a href="https://music.apple.com/profile/RockGamerAK" target="_blank">Go To My Profile!</a>
+    </noscript>
   </iframe>
 </Layout>
