create and use fullAreaiFrame.scss

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,7 +45,7 @@ if (className.startsWith(' ')) className = className.substring(1)
     <div class="wrapper">
       <main id="content">
         <h1 class="page-title">{pTitle}</h1>
-        <div class={className} style={inlineStyles}>
+        <div class={`page-area ${className}`} style={inlineStyles}>
           <slot />
         </div>
       </main>
