--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
+import '../styles/components/fullAreaIframe.scss'
+
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="" classItems="ignorePadding" inlineStyles="display: grid;">
-  <iframe frameborder="0" src="https://blog.adarshrkumar.dev" style="background: white;"></iframe>
+  <iframe frameborder="0" src="https://blog.adarshrkumar.dev"></iframe>
 </Layout>
