--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/components/fullAreaIframe.scss'
+
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="Music Taste" classItems="ignorePadding" inlineStyles="display: grid;">
