--- a/src/styles/components/themeSwitcher.scss
+++ b/src/styles/components/themeSwitcher.scss
@@ -45,28 +45,19 @@ body {
     right: var(--pos);
 
     box-sizing: border-box;
-    // padding: var(--padding);
+    padding: var(--padding);
 
     width: 30px;
     aspect-ratio: 1;
 
     background-color: var(--color);
-    background-size: calc(100% - var(--padding)*2);
-    background-repeat: no-repeat;
-    background-position: center;
-
     border-radius: 50%;
 
     box-shadow: 0 0 10px 0 var(--color);
 
     z-index: calc(9 * pow(10, 10));
-}
-[data-theme="system"] .theme-switcher {
-    background-image: url('/assets/icons/themes/system.svg');
-}
-[data-theme="light"] .theme-switcher {
-    background-image: url('/assets/icons/themes/light.svg');
-}
-[data-theme="dark"] .theme-switcher {
-    background-image: url('/assets/icons/themes/dark.svg');
+
+    & svg {
+        stroke: var(--color);
+    }
 }
