--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -96,7 +96,7 @@ h1.page-title {
     padding-block: 1.26375rem;
 
     border-bottom: 0.09375rem solid var(--background-secondary-color);
-    border-radius: 0.5rem;
+    border-radius: 0.5rem 0.5rem 0 0;
 
     text-align: center;
 }
