--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -95,7 +95,7 @@ h1.page-title {
     margin: 0;
     padding-block: 1.26375rem;
 
-    border-bottom: 0.09375rem solid var(--background-secondary-color);
+    border-bottom: 0.09375rem solid var(--color);
     border-radius: 0.5rem 0.5rem 0 0;
 
     text-align: center;
