--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -9,7 +9,7 @@ header {
   flex-wrap: wrap;
   gap: 15px;
 
-  border-bottom: solid 1px var(--background-secondary-color);
+  border-bottom: solid 1px var(--color);
 }
 
 header .logo {
