--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -27,7 +27,7 @@
 
     &, & input {
         background-color: var(--foreground-secondary-color);
-        color: var(--background-secondary-color);
+        color: var(--color);
     }
 }
 
