--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -82,7 +82,7 @@
 
         display: grid;
 
-        background-color: var(--foreground-secondary-color);
+        background-color: var(--color);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
