--- a/src/styles/pages/[about, contact].scss
+++ b/src/styles/pages/[about, contact].scss
@@ -9,7 +9,7 @@
 
     & > p {
         max-width: 100%;
-        color: var(--foreground-secondary-color);
+        color: var(--color);
         font-size: 12pt;
         line-height: 22.5px;
     }
@@ -26,7 +26,7 @@
     border-radius: 100vw;
 
     &, & input {
-        background-color: var(--foreground-secondary-color);
+        background-color: var(--color);
         color: var(--color);
     }
 }
