--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -27,12 +27,13 @@
 }
 
 .channel-stats {
+    $color: var(--color);
     display: grid;
     grid-template-rows: repeat(auto-fit, minmax(3rem, 1fr));
     gap: 1rem;
 
     .channel-container {
-        background-image: linear-gradient(lighen(var(--color), 10%), var(--color), darken(var(--color), 10%));
+        background-image: linear-gradient(lighen($color, 10%), var(--color), darken($color, 10%));
 
         border-radius: 6px;
 
