--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -33,7 +33,16 @@
     gap: 1rem;
 
     .channel-container {
-        background-image: linear-gradient(lighen($color, 10%), var(--color), darken($color, 10%));
+        background-image: var(--bg-image);
+        [data-theme="system"] {
+            --bg: linear-gradient(lighen(gray, 10%), gray, darken(gray, 10%))
+        }
+        [data-theme="light"] {
+            --bg: linear-gradient(lighen(black, 10%), black, darken(black, 10%))
+        }
+        [data-theme="dark"] {
+            --bg: linear-gradient(lighen(white, 10%), white, darken(white, 10%))
+        }
 
         border-radius: 6px;
 
