--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import '../styles/libraries/fire.scss'
 
 import '../styles/globals.scss'
-import '../styles/root.scss'
+// import '../styles/root.scss'
 
 import Header from '../components/header.astro'
 import Sidebar from '../components/sidebar.astro'
