--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -32,7 +32,7 @@
     gap: 1rem;
 
     .channel-container {
-        background-color: var(--text);
+        background-color: var(--color);
         border-radius: 6px;
 
         display: grid;
