--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import '../styles/libraries/fire.scss'
+// import '../styles/libraries/fire.scss'
 
 import '../styles/globals.scss'
-// import '../styles/root.scss'
+import '../styles/root.scss'
 
 import Header from '../components/header.astro'
 import Sidebar from '../components/sidebar.astro'
