--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -19,16 +19,17 @@ var { logo } = Astro.props
     </nav>
 </header>
 <script is:inline>
-    function goToUrl(link, target) {
-        if (!!link === false) link = '/'
+    function goToUrl(btn, target) {
+        var link = btn
         if (!!target === false) target = '_self'
         if (typeof link !== 'string') {
-            link = link.getAttribute('url')
-            target = link.getAttribute('target')
+            link = btn.getAttribute('url')
+            target = btn.getAttribute('target')
             if (!!target === false) {
                 if (link.includes('://')) target = '_blank'
             }
         }
+        if (!!link === false) link = '/'
         if (target === '_blank') {
             window.open(link)
         }
