--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -43,7 +43,7 @@ header .logo:is(:hover, :focus) {
 }
 
 .nav button {
-  // padding: 10px 20px;
+  padding: 10px 20px;
 
   border-radius: 100vw;
 
